Fix: Fixed sonar issues